--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,8 @@
     ".vscode": true,
     "node_modules": true,
     "yarn.lock": true,
-    "package-lock.json": true
+    "package-lock.json": true,
+    "README.md": true,
+    ".gitignore": true
   }
 }
