--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
+    "react-detect-click-outside": "^1.1.1",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.20.4",
     "react-router-dom": "^6.0.2",
