--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,9 @@
 {
   "files.exclude": {
-    ".vscode": true,
+    ".vscode": false,
     "node_modules": true,
     "yarn.lock": true,
-    "package-lock.json": true,
+    "package-lock.json": false,
     "README.md": true,
     ".gitignore": true
   }
