--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-detect-click-outside": "^1.1.1",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.20.4",
+    "react-number-format": "^4.8.0",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "react-use": "^17.3.1",
