--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "react-use": "^17.3.1",
+    "react-uuid": "^1.0.2",
     "toastify-js": "^1.11.2",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.11"
